test/speg_grammar_fixtures/valid/simple_string_space_before_grammar.peg
                           

                           GRAMMAR url test ->"asda";newtest-> "sda";
