test/speg_grammar_fixtures/invalid/simple_string_no_space.peg
GRAMMAR urltest -> "asda";newtest -> "sda";
